Fixed problem with header z-index

--- a/public/less/index.less
+++ b/public/less/index.less
@@ -54,14 +54,12 @@ body {
 
 			&.opaque {
 				.rectangle(100%, 100%);
-				z-index: 0;
 			}
 
 			&#pseac {
 				.rectangle(100%, auto);
 				text-align: center;
 				padding-top: 125px;
-				z-index: 1;
 
 				.title {
 					color: white;
@@ -89,7 +87,6 @@ body {
 			position: absolute;
 			bottom: 5px;
 			right: 5px;
-			z-index: 0;
 		}
 	}
 
